<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_menu"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_1"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_appointments"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/menu_2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_shop"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_android_black_24dp"
        android:title="@string/menu_3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_more"
        android:checked="false"
        android:enabled="true"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="@string/menu_4"
        app:showAsAction="ifRoom" />

</menu>
